# ipc-study

./: CMakeLists.txt  README.md  benchmark.sh  walltime.sh
benchmarks/: channel.bench.c
channels/: channel.c  channel.h  macros.h
channels/flavors/: flavors.h  mmap.c  socket.c
channels/psync/: cv.c  cv.h  mutex.c  mutex.h
demos/: CMakeLists.txt  via_file.c  via_signals.c
